# equadiffMPI

./: Readme.md  batch.sh  extrae-mpi-omp.xml  run-batch.sh  run.sh
cartesian-split/: CMakeLists.txt  cart_main.cc
horizontal-split/: CMakeLists.txt  mpi_pencil_main.cc  success_or_die.h
